 * Fix dependonservice LanManWorkStation (old win)
 * Fix RtlStringFromGUID problem on NT4

2012-08-04 MickeM
 * Fixed exception with "nscp service"
 * Improved nscp settings so help is displayed.
 * Improved nscp settings so default action (no arguments) also lists all installed services.
 * Improved nscp settings to default list service nscp as well as legcy nsclientpp

2012-08-03 MickeM
 * Hopefully fixed the "cant load counter" issue by reowrking how counters are handled.

2012-08-02 MickeM
 * major improvments to the CheckSystem command line syntax:
   Run: "nscp sys" to get help.
   A good way to validate your CheckSystem issues are running the following:
     nscp sys --validate

2012-08-02 MickeM
 * Added so commandline parser will stop at .. and pass along all extra options to the module.
    So now you can do: (Notice the double --log where the first is a log arg and the second is a module arg)
      nscp lua --log debug .. --script foo.lua --log this-is-a-lua-argument
    But perhaps more importantly you can do:
      nscp lua .. --help
    Which previously would always give you "command line help" and not lua help.

2012-08-01 MickeM
 * Resolved issue with crypto++ on linux (introduced by buildspeedups)
 * Added so running "nscp settings" will list all loaded settins context (as a tree).
   Quick way to see where your settings are stored.

2012-07-31 MickeM
 * Fixed issue with files not copied by default build
 * Swapped graphite client to use UTC instead of local time

2012-07-30 MickeM
 * Restructured settings a bit removing dead code
 * Added nscp settings --validate to validate a given settings file listing all invalid (unregistered) keys.
 * Added SamplePluginSimple which currently is not very rich but at least has some comments to explain some of the things.

2012-07-29 MickeM
 * Tracked down a few memoryleaks when connections time-out.
 * Added testcases for connection timeouts in lua NRPE test suite
 * Improved the LUA module a bit
